App Soccer FE | Fix align on tournament details page

--- a/src/app/components/tournaments/tournament-details/tournament-details.component.scss
+++ b/src/app/components/tournaments/tournament-details/tournament-details.component.scss
@@ -16,7 +16,6 @@
     height: 300px;
     width: 100%;
     justify-content: space-between;
-    margin: 0 5%;
   }
   &-card {
     text-align: center;
